InitializeDatabase agrandit